# recorder

./: .gitignore  CMakeLists.txt  README.md  aiagent.md  mod.json
.github/workflows/: build.yml  release.yml
src/: AudioCapture.cpp  AudioCapture.hpp  CaptureNode.cpp  CaptureNode.hpp  MenuPopup.cpp  MenuPopup.hpp  MicrophoneCapture.cpp  MicrophoneCapture.hpp  RecorderManager.cpp  RecorderManager.hpp  SavingPopup.cpp  SavingPopup.hpp  main.cpp
